@@ -1,5 +1,8 @@
 2011-11-18  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wgdiplus.cpp src/win/wgdiplus.h src/win/wgnuplib.h
+	src/win/wgraph.c src/win/wresourc.h: Antialiasing of fill patterns.
+
 	* src/win/wgraph.c (CopyPrint): Use Print Setup dialog since the Page
 	Setup dialog does not offer a possibility to change printer. Do not
 	use antialiasing on printers.
